--- a/Team-133-main/requirements.txt
+++ b/Team-133-main/requirements.txt
@@ -65,7 +65,7 @@ tenacity==9.0.0
 threadpoolctl==3.5.0
 tokenizers==0.20.1
 toml==0.10.2
-tornado==6.4.1
+tornado>=6.4.2
 tqdm==4.66.5
 typing_extensions==4.12.2
 tzdata==2024.2
